openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-file-explorer
  namespace: obc-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-file-explorer
  template:
    metadata:
      labels:
        app: s3-file-explorer
    spec:
      containers:
        - name: s3-file-explorer
          image: image-registry.openshift-image-registry.svc:5000/obc-testing/s3-file-explorer:latest
          ports:
            - containerPort: 5000
