openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-file-explorer
  namespace: obc-testing
spec:
  selector:
    app: s3-file-explorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
